--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "svelte-json-tree",
   "version": "0.0.5",
   "description": "Svelte JSON Viewer Component",
-  "main": "src/index.svelte",
-  "svelte": "src/index.svelte",
+  "main": "src/Root.svelte",
+  "svelte": "src/Root.svelte",
   "author": "Tan Li Hau <lhtan93@gmail.com>",
   "license": "MIT",
   "keywords": [
