--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "svelte-json-tree",
   "version": "0.1.0",
   "description": "Svelte JSON Viewer Component",
+  "module": "dist/index.mjs",
   "main": "dist/index.js",
   "svelte": "src/Root.svelte",
   "author": "Tan Li Hau <lhtan93@gmail.com>",
@@ -22,11 +23,11 @@
     "build-website": "rollup -c rollup-docs.config.js"
   },
   "devDependencies": {
-    "rollup": "^1.27.14",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^5.1.1",
-    "rollup-plugin-terser": "^5.1.3",
-    "svelte": "3.16.7"
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
+    "rollup": "^2.36.1",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.31.2"
   }
 }
