--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
     "svelte": "^3.44.0",
+    "svelte-preprocess": "^4.10.4",
     "svelte2tsx": "^0.5.6",
     "typescript": "^4.6.3"
   },
