--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
-    "package": "svelte-kit package",
+    "package": "svelte-kit package && vite build && STANDALONE=true vite build",
     "preview": "svelte-kit preview",
     "prepare": "svelte-kit sync",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -39,5 +39,18 @@
     "svelte2tsx": "^0.5.6",
     "typescript": "^4.6.3"
   },
+  "main": "./index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/es/index.js",
+      "require": "./dist/cjs/index.js"
+    },
+    "./standalone": {
+      "import": "./dist/standalone/es/index.js",
+      "require": "./dist/standalone/cjs/index.js"
+    },
+    "./standalone/umd": "./dist/standalone/umd/index.js"
+  },
+  "svelte": "./index.js",
   "type": "module"
 }
