--- a/package.json
+++ b/package.json
@@ -25,15 +25,19 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-static": "next",
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "codemirror": "^5.65.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "mdsvex": "^0.10.5",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
+    "shiki": "^0.10.1",
+    "shiki-twoslash": "^3.0.2",
     "svelte": "^3.44.0",
     "svelte-preprocess": "^4.10.4",
     "svelte2tsx": "^0.5.6",
