--- a/package.json
+++ b/package.json
@@ -18,58 +18,59 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build && npm run package",
+    "build:standalone": "BUILD_MODE=standalone vite build",
+    "build:bundled": "BUILD_MODE=bundled vite build",
     "preview": "vite preview",
-    "package": "svelte-kit sync && svelte-package && STANDALONE=true vite build && node scripts/post-package.js && publint",
+    "package": "svelte-kit sync && svelte-package -i src/lib/svelte-json-tree -o dist/lib && pnpm build:standalone && pnpm build:bundled && publint",
     "prepublishOnly": "npm run package",
     "test": "playwright test",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
     "@playwright/test": "^1.28.1",
     "@sveltejs/adapter-static": "^2.0.0",
-    "@sveltejs/kit": "^1.5.0",
-    "@sveltejs/package": "^2.0.0",
+    "@sveltejs/kit": "^1.20.4",
+    "@sveltejs/package": "^2.1.0",
+    "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "codemirror": "^5.65.2",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.26.0",
+    "mdsvex": "^0.11.0",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.8.1",
     "publint": "^0.1.9",
     "shiki": "^0.10.1",
     "shiki-twoslash": "^3.0.2",
-    "svelte": "^3.54.0",
+    "svelte": "^4.0.0",
     "svelte-check": "^3.0.1",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.3.0",
-    "mdsvex": "^0.10.6"
+    "vite": "^4.3.0"
   },
   "peerDependencies": {
-		"svelte": "^3.54.0"
-	},
+    "svelte": "^4.0.0"
+  },
   "exports": {
     ".": {
-      "svelte": "./index.js",
-      "types": "./dist/index.d.ts",
-      "import": "./dist/es/index.js",
-      "require": "./dist/cjs/index.js"
+      "types": "./dist/lib/index.d.ts",
+      "svelte": "./dist/lib/index.js",
+      "import": "./dist/esm/index.js"
     },
     "./standalone": {
-      "import": "./dist/standalone/es/index.js",
-      "require": "./dist/standalone/cjs/index.js"
+      "import": "./dist/standalone/es/index.js"
     },
     "./standalone/umd": "./dist/standalone/umd/index.js"
   },
   "files": [
-		"dist",
-		"!dist/**/*.test.*",
-		"!dist/**/*.spec.*"
-	],
+    "dist",
+    "!dist/**/*.test.*",
+    "!dist/**/*.spec.*"
+  ],
   "type": "module"
 }
