--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,6 +33,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: Setup
         run: pnpm install && pnpm build
       - name: Upload artifact
